--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
+    <script src="https://kit.fontawesome.com/423db9ba7e.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" 
@@ -44,75 +39,82 @@
                 </div>
             </div>
             <div class="col-8">
-                <div class="row d-flex flex-column ml-3">
+                <div class="row d-flex flex-column ml-3 mt-3">
                     <h3>Current Weather</h3>
                     <div class="row d-flex dlex-column">
-                        <div class="card">
-                            <div class="card-header">
-                                <div class="row">
-                                    <h4 class="col-5 currentcityName">City Name</h4>
-                                    <p class="col-5 currentDate">Date</p>
-                                    <i class="col-2 fa-regular fa-sun"></i>
+                        <div class="col-11">
+                            <div class="card">
+                                <div class="card-header">
+                                    <div class="row">
+                                        <h4 class="col-5 currentcityName">City Name</h4>
+                                        <p class="col-5 currentDate">Date</p>
+                                        <i class="col-2 fa-regular fa-sun id=currentIcon"></i>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="card-body">
-                                <p class="row" id="currentTemp">Temperature: </p>
-                                <p class="row" id="currentWind">Wind: </p>
-                                <p class="row" id="currentHumidity">Humidity: </p>
+                                <div class="card-body">
+                                    <p class="row" id="currentTemp">Temp: </p>
+                                    <p class="row" id="currentWind">Wind: </p>
+                                    <p class="row" id="currentHumidity">Humidity: </p>
+                                </div> 
                             </div> 
-                        </div>                        
+                        </div>                       
                     </div>                   
                 </div>
-                <div class="row mt-3 mr-3 d-flex flex-column">
+                <div class="row d-flex flex-column ml-3 mt-1">
                     <h5>5 Day Forecast</h5>
                     <div class="row">
                         <div class="col-2">
-                            <div class="card" id="5dayCard">
+                            <div class="card" id="fivedayCard">
                                 <div class="card-header" id="date1">Date 1</div>
                                 <div class="card-body">
-                                    <p class="row" id="day1Temp">Temperature: </p>
+                                    <i class="col-2 fa-regular fa-sun id=day1Icon"></i>
+                                    <p class="row" id="day1Temp">Temp: </p>
                                     <p class="row" id="day1Wind">Wind: </p>
                                     <p class="row" id="day1Humidity">Humidity: </p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-2">
-                            <div class="card" id="5dayCard">
+                            <div class="card" id="fivedayCard">
                                 <div class="card-header" id="date2">Date 2</div>
                                 <div class="card-body">
-                                    <p class="row" id="day1Temp">Temperature: </p>
-                                    <p class="row" id="day1Wind">Wind: </p>
-                                    <p class="row" id="day1Humidity">Humidity: </p>
+                                    <i class="col-2 fa-regular fa-sun id=day2Icon"></i>
+                                    <p class="row" id="day2Temp">Temp: </p>
+                                    <p class="row" id="day2Wind">Wind: </p>
+                                    <p class="row" id="day2Humidity">Humidity: </p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-2">
-                            <div class="card" id="5dayCard">
+                            <div class="card" id="fivedayCard">
                                 <div class="card-header" id="date3">Date 3</div>
                                 <div class="card-body">
-                                    <p class="row" id="day1Temp">Temperature: </p>
-                                    <p class="row" id="day1Wind">Wind: </p>
-                                    <p class="row" id="day1Humidity">Humidity: </p>
+                                    <i class="col-2 fa-regular fa-sun id=day3Icon"></i>
+                                    <p class="row" id="day3Temp">Temp: </p>
+                                    <p class="row" id="day3Wind">Wind: </p>
+                                    <p class="row" id="day3Humidity">Humidity: </p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-2">
-                            <div class="card" id="5dayCard">
+                            <div class="card" id="fivedayCard">
                                 <div class="card-header" id="date4">Date 4</div>
                                 <div class="card-body">
-                                    <p class="row" id="day1Temp">Temperature: </p>
-                                    <p class="row" id="day1Wind">Wind: </p>
-                                    <p class="row" id="day1Humidity">Humidity: </p>
+                                    <i class="col-2 fa-regular fa-sun id=day4Icon"></i>
+                                    <p class="row" id="day4Temp">Temp: </p>
+                                    <p class="row" id="day4Wind">Wind: </p>
+                                    <p class="row" id="day4Humidity">Humidity: </p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-2">
-                            <div class="card" id="5dayCard">
+                            <div class="card" id="fivedayCard">
                                 <div class="card-header" id="date5">Date 5</div>
                                 <div class="card-body">
-                                    <p class="row" id="day1Temp">Temperature: </p>
-                                    <p class="row" id="day1Wind">Wind: </p>
-                                    <p class="row" id="day1Humidity">Humidity: </p>
+                                    <i class="col-2 fa-regular fa-sun id=day5Icon"></i>
+                                    <p class="row" id="day5Temp">Temp: </p>
+                                    <p class="row" id="day5Wind">Wind: </p>
+                                    <p class="row" id="day5Humidity">Humidity: </p>
                                 </div>
                             </div>
                         </div>
