added more variables and started functions in js, changed type from button to submit in html

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                     <h2>Search for a City:</h2>
                     <form id="search-form" class="form">
                         <div class="form-inline form-group">
-                            <div class="input-group">
+                            <div class="input-group mr-2">
                                 <input type="city" class="form-control mb-0 mt-3" 
                                 id="cityInput" placeholder="city name">
                             </div>
                             <div class="input-group-append">
-                                <button type="button" class="btn my-3 searchBtn" 
+                                <button type="submit" class="btn my-3 searchBtn" 
                                 id="mainSearch">Search</button>
                                 <hr/>
                             </div>
