button onclick in js

--- a/index.html
+++ b/index.html
@@ -25,15 +25,14 @@
                 <div class="container d-flex flex-column border-bottom mt-1" id="searchCity">
                     <h2>Search for a City:</h2>
                     <form id="search-form" class="form">
-                        <div class="form-inline form-group">
+                        <div class="form-inline form-group d-flex flex-column">
                             <div class="input-group mr-2">
                                 <input type="city" class="form-control mb-0 mt-3" 
                                 id="cityInput" placeholder="city name">
                             </div>
-                            <div class="input-group-append">
+                            <div class="btn-group-append">
                                 <button type="submit" class="btn my-3 searchBtn" 
                                 id="mainSearch">Search</button>
-                                <hr/>
                             </div>
                         </div>
                     </form>           
