search button working, now working on calling API

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 id="cityInput" placeholder="city name">
                             </div>
                             <div class="btn-group-append">
-                                <button type="submit" class="btn my-3 searchBtn" 
+                                <button type="button" class="btn my-3 searchBtn" 
                                 id="mainSearch">Search</button>
                             </div>
                         </div>
@@ -50,10 +50,10 @@
             </div>
             <div class="col-8">
                 <section class="row d-flex flex-column ml-3 mt-1" id="today">
-                    <!-- <h3>Current Weather</h3>
+                    <h3>Current Weather</h3>
                     <div class="row d-flex dlex-column">
                         <div class="col-11">
-                            <div class="card">
+                            <!-- <div class="card">
                                 <div class="card-header">
                                     <div class="row">
                                         <h4 class="col-5 currentcityName">City Name</h4>
@@ -66,14 +66,14 @@
                                     <p class="row" id="currentWind">Wind: </p>
                                     <p class="row" id="currentHumidity">Humidity: </p>
                                 </div> 
-                            </div> 
+                            </div>  -->
                         </div>                       
-                    </div>                    -->
+                    </div>                   
                 </section>
                 <section class="row d-flex flex-column ml-3 mt-1" id="forecast">
-                    <!-- <h5>5 Day Forecast</h5>
+                    <h5>5 Day Forecast</h5>
                     <div class="row">
-                        <div class="col-2">
+                        <!-- <div class="col-2">
                             <div class="card" id="fivedayCard">
                                 <div class="card-header" id="date1">Date 1</div>
                                 <div class="card-body">
@@ -128,7 +128,7 @@
                                 </div>
                             </div>
                         </div> -->
-                    <!-- </div> -->
+                    </div>
                 </section>
             </div>
         </div>
