--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 </div>
             </div>
             <div class="col-8">
-                <section class="row d-flex flex-column ml-3 mt-1" id="today">
+                <section class="row d-flex flex-column ml-3 mt-1 mr-3">
                     <h3>Current Weather</h3>
                     <div class="row d-flex dlex-column">
-                        <div class="col-11">
+                        <div class="col-11" id="today">
                             <!-- <div class="card">
                                 <div class="card-header">
                                     <div class="row">
@@ -70,9 +70,9 @@
                         </div>                       
                     </div>                   
                 </section>
-                <section class="row d-flex flex-column ml-3 mt-1" id="forecast">
+                <section class="row d-flex flex-column ml-3 mt-1">
                     <h5>5 Day Forecast</h5>
-                    <div class="row">
+                    <div class="row" id = "forecast">
                         <!-- <div class="col-2">
                             <div class="card" id="fivedayCard">
                                 <div class="card-header" id="date1">Date 1</div>
