margins in html and screenshots for readme

--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
                 </section>
                 <section class="row d-flex flex-column ml-3 mt-1">
                     <h5>5 Day Forecast</h5>
-                    <div class="row" id = "forecast">
-                        <!-- <div class="col-2">
-                            <div class="card" id="fivedayCard">
-                                <div class="card-header" id="date1">Date 1</div>
+                    <div class="row mb-2" id="forecast">
+                        <!-- <div class="col-2" id="forecast"> -->
+                            <!-- <div> -->
+                                <!-- <div class="card-header" id="date1">Date 1</div>
                                 <div class="card-body">
                                     <i class="fa-regular fa-sun id=day1Icon"></i>
                                     <p class="row" id="day1Temp">Temp: </p>
                                     <p class="row" id="day1Wind">Wind: </p>
                                     <p class="row" id="day1Humidity">Humidity: </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-2">
+                                </div> -->
+                            <!-- </div> -->
+                        <!-- </div> -->
+                        <!-- <div class="col-2">
                             <div class="card" id="fivedayCard">
                                 <div class="card-header" id="date2">Date 2</div>
                                 <div class="card-body">
